kubernetes/api/service.yaml
---

apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: getlock
  labels:
    app: api
spec:
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
